bench/tests/plans/snapshots/r#mod__plans__bsbm_explore__BSBM Explore - Q2 (Execution Plan, ObjectId).snap
---
source: bench/tests/plans/bsbm_explore.rs
expression: "&string"
---
DecodeObjectIdsExec: projections=[label -> label, comment -> comment, producer -> producer, productFeature -> productFeature, propertyTextual1 -> propertyTextual1, propertyTextual2 -> propertyTextual2, propertyTextual3 -> propertyTextual3, propertyNumeric1 -> propertyNumeric1, propertyNumeric2 -> propertyNumeric2, propertyTextual4 -> propertyTextual4, propertyTextual5 -> propertyTextual5, propertyNumeric4 -> propertyNumeric4]
  NestedLoopJoinExec: join_type=Left
    NestedLoopJoinExec: join_type=Left
      NestedLoopJoinExec: join_type=Left
        CrossJoinExec
          CrossJoinExec
            CrossJoinExec
              CrossJoinExec
                CrossJoinExec
                  ProjectionExec: expr=[label__oid@0 as label, comment__oid@1 as comment, producer__oid@3 as producer, productFeature__oid@5 as productFeature]
                    HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(f__oid@4, f__oid@0)], projection=[label__oid@0, comment__oid@1, p__oid@2, producer__oid@3, f__oid@4, productFeature__oid@6]
                      CrossJoinExec
                        HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p__oid@2, p__oid@0)], projection=[label__oid@0, comment__oid@1, p__oid@2, producer__oid@3]
                          HashJoinExec: mode=CollectLeft, join_type=Inner, on=[(p__oid@2, p__oid@0)], projection=[label__oid@0, comment__oid@1, p__oid@2, producer__oid@4]
                            CrossJoinExec
                              CrossJoinExec
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www.w3.org/2000/01/rdf-schema#label> ?label], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as label__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 1610, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 1610 AND 1610 <= predicate_max@6, required_guarantees=[predicate in (1610), subject in (17218)]
                                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www.w3.org/2000/01/rdf-schema#comment> ?comment], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as comment__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 1611, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 1611 AND 1611 <= predicate_max@6, required_guarantees=[predicate in (1611), subject in (17218)]
                              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/producer> ?p], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as p__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14904, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14904 AND 14904 <= predicate_max@6, required_guarantees=[predicate in (14904), subject in (17218)]
                            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?p <http://www.w3.org/2000/01/rdf-schema#label> ?producer], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as p__oid, object@3 as producer__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://purl.org/dc/elements/1.1/publisher> ?p], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as p__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 1612 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 1612 AND 1612 <= predicate_max@6, required_guarantees=[predicate in (1612), subject in (17218)]
                        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productFeature> ?f], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as f__oid], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14913, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14913 AND 14913 <= predicate_max@6, required_guarantees=[predicate in (14913), subject in (17218)]
                      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[?f <http://www.w3.org/2000/01/rdf-schema#label> ?productFeature], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GPOS/delta-parquet-file.zstd.parquet]]}, projection=[subject@1 as f__oid, object@3 as productFeature__oid], file_type=parquet, predicate=graph@0 IS NULL AND predicate@2 = 1610 AND DynamicFilter [ empty ], pruning_predicate=graph_null_count@0 > 0 AND predicate_null_count@3 != row_count@4 AND predicate_min@1 <= 1610 AND 1610 <= predicate_max@2, required_guarantees=[predicate in (1610)]
                  ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual1> ?propertyTextual1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyTextual1], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14909, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14909 AND 14909 <= predicate_max@6, required_guarantees=[predicate in (14909), subject in (17218)]
                ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual2> ?propertyTextual2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyTextual2], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14910, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14910 AND 14910 <= predicate_max@6, required_guarantees=[predicate in (14910), subject in (17218)]
              ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual3> ?propertyTextual3], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyTextual3], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14911, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14911 AND 14911 <= predicate_max@6, required_guarantees=[predicate in (14911), subject in (17218)]
            ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric1> ?propertyNumeric1], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyNumeric1], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14905, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14905 AND 14905 <= predicate_max@6, required_guarantees=[predicate in (14905), subject in (17218)]
          ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric2> ?propertyNumeric2], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyNumeric2], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14906, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14906 AND 14906 <= predicate_max@6, required_guarantees=[predicate in (14906), subject in (17218)]
        ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual4> ?propertyTextual4], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyTextual4], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14912, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14912 AND 14912 <= predicate_max@6, required_guarantees=[predicate in (14912), subject in (17218)]
      ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyTextual5> ?propertyTextual5], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyTextual5], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14917, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14917 AND 14917 <= predicate_max@6, required_guarantees=[predicate in (14917), subject in (17218)]
    ParquetQuadScanExec: active_graph=Default Graph, triple_pattern=[<http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer6/Product272> <http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/productPropertyNumeric4> ?propertyNumeric4], blank_node_mode=Variable, file_groups={1 group: [[databases/bsbm-1000/GSPO/delta-parquet-file.zstd.parquet]]}, projection=[object@3 as propertyNumeric4], file_type=parquet, predicate=graph@0 IS NULL AND subject@1 = 17218 AND predicate@2 = 14916, pruning_predicate=graph_null_count@0 > 0 AND subject_null_count@3 != row_count@4 AND subject_min@1 <= 17218 AND 17218 <= subject_max@2 AND predicate_null_count@7 != row_count@4 AND predicate_min@5 <= 14916 AND 14916 <= predicate_max@6, required_guarantees=[predicate in (14916), subject in (17218)]
